Update Style & Fix Bug
Update styling of buttons and fixed multiplication bug.

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -90,3 +90,11 @@ body{
   color: white;
   text-align: right;
 }
+
+.keypadOp{
+  background-color: #001845;
+}
+
+.keypadClear{
+  background-color: #e63946;
+}
