--- a/admin-dashboard/assets/css/style.css
+++ b/admin-dashboard/assets/css/style.css
@@ -1,12 +1,12 @@
-*{
-  box-sizing: border-box;
+body,html{
   padding: 0;
   margin: 0;
 }
 
-.body{
-  font-family: 'Lato' !important;
+*{
+  box-sizing: border-box;
 }
+
 .parent {
   display: grid;
   grid-template-areas: 
@@ -16,7 +16,7 @@
   grid-template-rows: 1fr 8fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  min-height: 100vh;
+  min-height: calc(100vh - 3px);
   
   }
   
@@ -28,7 +28,7 @@
   }
 
   .logo {
-    width: 80%;
+    width: 100%;
     margin: auto;
     padding: 20px;
   }
@@ -36,6 +36,11 @@
   .top-nav {
     grid-area: top;
     background-color: #212130;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .main {
@@ -89,29 +94,34 @@
     height: fit-content;
     max-height: 100%;
     position: relative;
-    padding-top: 1.5%;
-    padding-left: 1%;
   }
+
+  .search-box .material-icons{
+    color: #f93a0b;
+  }
+
   .input-search{
     height: 50px;
     width: 50px;
-    border-style: none;
     padding: 10px;
+    font-family: 'Bebas Neue', cursive;
     font-size: 18px;
     letter-spacing: 2px;
     outline: none;
-    border-radius: 25px;
+    border:2px solid #f93a0b;
     transition: all .5s ease-in-out;
-    background-color: #f93a0b;
+    background-color: transparent;
     padding-right: 40px;
-    color:#fff;
+    color:#f93a0b;
   }
+
   .input-search::placeholder{
     color:rgba(255,255,255,.5);
     font-size: 18px;
     letter-spacing: 2px;
     font-weight: 100;
   }
+
   .btn-search{
     width: 50px;
     height: 50px;
@@ -127,17 +137,109 @@
     background-color:transparent;
     pointer-events: painted;  
   }
+
   .btn-search:focus ~ .input-search{
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
+    border:2px solid #f93a0b;
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
   }
+
   .input-search:focus{
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
+    border:2px solid #f93a0b;
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
   }
+
+  /* notification bar */
+
+  .noti-bar {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding-right: 2%;
+    align-items: center;
+  }
+
+  .noti-bar .material-icons{
+    font-size: xx-large;
+  }
+
+  .profile-img {
+    width: 5%;
+  }
+
+  /* page content */
+
+  .content {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    width: 100%;
+    height: 100vh;
+    padding: 2%;
+    gap: 2%;
+    color: white;
+    font-family: 'Barlow Condensed', sans-serif;
+    }
+
+    .main-title {
+      color: white;
+      padding-left: 2%;
+      font-size: larger;
+      font-family: 'Barlow Condensed', sans-serif;
+    }
+    
+    .card-left-top { 
+      grid-area: 1 / 1 / 3 / 3;
+      background-color: #212130;
+    }
+    .card-left-middle { 
+      grid-area: 3 / 1 / 5 / 3;
+      background-color: #212130;
+    }
+    .card-left-bottom{ 
+      grid-area: 5 / 1 / 7 / 3;
+      background-color: #212130;
+    }
+     
+    .card-right-top { 
+      grid-area: 1 / 3 / 3 / 5;
+      background-color: #212130;
+    }
+     
+    .card-right-middle { 
+      grid-area: 3 / 3 / 5 / 5;
+      background-color: #212130;
+    }
+     
+    .card-right-bottom { 
+      grid-area: 5 / 3 / 7 / 5;
+      background-color: #212130;
+    }
+     
+    .side-card-top { 
+      grid-area: 1 / 5 / 4 / 6;
+      background-color: #212130;
+    }
+     
+    .side-card-bottom{ 
+      grid-area: 4 / 5 / 7 / 6;
+      background-color: #212130;
+    }
+
+    .announcement, .card-title{
+      padding-left: 5%;
+      padding-right: 5%;
+    }
+
+    .card-title {
+      color: #f93a0b;
+    }
+     
+    
