--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -23,7 +23,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', sans-serif;
   color: var(--light);
   background: var(--global-background);
-  height: 100vh;
+  height: 80vh;
+  width: 100vw;
 }
 
 a,
@@ -40,6 +41,19 @@ button::-moz-focus-inner {
   border: 0;
 }
 
+.board-tiles a {
+  height: 100%;
+  width: 100%;
+}
+
+.scores {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 22vw;
+  font-size: x-large;
+}
+
 .game-board {
   display: flex;
   flex-direction: column;
@@ -53,7 +67,7 @@ button::-moz-focus-inner {
   justify-content: space-between;
   align-items: center;
   width: 25vw;
-  padding-bottom: 5vh;
+  padding-bottom: 10vh;
 }
 
 table {
@@ -63,7 +77,7 @@ table {
 }
 table td {
   padding: 1rem;
-  border: 5px solid black;
+  border: 5px solid lightgray;
   width: 10vw;
   height: 10vh;
   text-align: center;
@@ -80,9 +94,9 @@ table td {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
   background: var(--m-background);
 }
 
@@ -197,4 +211,53 @@ label::first-letter {
     0 0 4.4rem .2rem var(--shadow-2),
     0 0 0 .4rem var(--global-background),
     0 0 0 .5rem var(--focus);
+}
+
+
+.display {
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.hide {
+  display: none;
+}
+
+.playerX {
+  color: hsl(255, 30%, 55%);
+}
+
+.playerO {
+  color: hsl(210, 90%, 50%);
+}
+
+
+.container {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 33% 33% 33%;
+  max-width: 300px;
+
+}
+
+.tile {
+  border: 1px solid white;
+  min-width: 100px;
+  min-height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.turn-state {
+  display: flex;
+  width: 25vw;
+  justify-content: center;
+  font-size: xx-large;
 }
