--- a/form-validation/style.css
+++ b/form-validation/style.css
@@ -6,13 +6,42 @@ body {
   height: 100vh;
 }
 
+p * {
+  display: block;
+}
+
+input[type=email]{
+  -webkit-appearance: none;
+  appearance: none;
+
+  width: 100%;
+  border: 1px solid #333;
+  margin: 0;
+
+  font-family: inherit;
+  font-size: 90%;
+
+  box-sizing: border-box;
+}
+
+/* This is our style for the invalid fields */
+input:invalid{
+  border-color: #900;
+  background-color: #FDD;
+}
+
+input:focus:invalid {
+  outline: none;
+}
+
+
 .form {
   background-color: #15172b;
   border-radius: 20px;
   box-sizing: border-box;
-  height: 500px;
+  height: 750px;
   padding: 20px;
-  width: 320px;
+  width: 30vw;
 }
 
 .title {
@@ -32,17 +61,13 @@ body {
 }
 
 .input-container {
-  height: 50px;
+  height: 90px;
   position: relative;
   width: 100%;
 }
 
 .ic1 {
-  margin-top: 40px;
-}
-
-.ic2 {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .input {
@@ -52,7 +77,7 @@ body {
   box-sizing: border-box;
   color: #eee;
   font-size: 18px;
-  height: 100%;
+  height: 50px;
   outline: 0;
   padding: 4px 20px 0;
   width: 100%;
@@ -114,11 +139,32 @@ body {
   font-size: 18px;
   height: 50px;
   margin-top: 38px;
-  // outline: 0;
+  outline: 0;
   text-align: center;
   width: 100%;
 }
 
 .submit:active {
   background-color: #06b;
+}
+
+
+.form-control.input-container.ic1.success input {
+	border-color: #2ecc71;
+}
+
+.form-control.input-container.ic1.error input {
+	border-color: #e74c3c;
+}
+
+.form-control small {
+	color: #e74c3c;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	visibility: hidden;
+}
+
+.form-control.input-container.ic1.error small {
+	visibility: visible;
 }
