Weather Page: Icons
Begin implementing icons. Currently grabs icon for top left panel, forecast panel has placeholders.

--- a/weather-app/assets/css/style.css
+++ b/weather-app/assets/css/style.css
@@ -140,6 +140,10 @@ img.bg {
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
   }
 
+  .weather_icons {
+    width: 128px;
+  }
+
   #weather {
     text-transform: lowercase;
   }
