--- a/weather-app/assets/css/style.css
+++ b/weather-app/assets/css/style.css
@@ -3,158 +3,303 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
-  background-color: black;
-  font-family: 'Raleway', sans-serif;
-  color: white;
+  background-color: #000;
+  font-family: Raleway, sans-serif;
+  color: #fff;
   font-size: xx-large;
 }
-
 img.bg {
-  /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
-	
-  /* Set up proportionate scaling */
   width: 100%;
   height: auto;
-	
-  /* Set up positioning */
   position: fixed;
   top: 0;
   left: 0;
   z-index: -1;
 }
-
 .darken {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   width: 100vw;
   height: 100vh;
   z-index: 0;
 }
-
 .content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  grid-column-gap: 0;
+  grid-row-gap: 0;
   width: 99vw;
   height: 98vh;
-  position:absolute;
+  position: absolute;
   top: 0;
-  }
-  
-  .search {
-    grid-area: 1 / 1 / 3 / 2;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: left;
-    flex-direction: column;
-  }
-
-  .stats {
-    grid-area: 1 / 2 / 3 / 3;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: right;
-  }
-
-  .forecast {
-    grid-area: 3 / 1 / 4 / 3;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-  }
-
-  .location {
-    padding: 1rem;
-  }
-
-  .location_stats {
-    padding: 1rem;
-  }
-
-  .day1, .day2, .day3, .day4, .day5, .day6, .day7 {
-    padding: 1rem;
-  }
-
-  .search-box{
-    width: fit-content;
-    height: fit-content;
-    position: relative;
-  }
-  .input-search{
-    height: 50px;
-    width: 50px;
-    border-style: none;
-    padding: 10px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    outline: none;
-    border-radius: 25px;
-    transition: all .5s ease-in-out;
-    background-color: cornflowerblue;
-    padding-right: 40px;
-    color:#fff;
-  }
-  .input-search::placeholder{
-    color:rgba(255,255,255,.5);
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 100;
-  }
-  .btn-search{
-    width: 50px;
-    height: 50px;
-    border-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
-    cursor: pointer;
-    border-radius: 50%;
-    position: absolute;
-    right: 0px;
-    color:#ffffff ;
-    background-color:transparent;
-    pointer-events: painted;  
-  }
-  .btn-search:focus ~ .input-search{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
-  .input-search:focus{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
-
-  .weather_icons {
-    width: 128px;
-  }
-
-  #weather {
-    text-transform: lowercase;
-  }
-
-  #weather::first-letter {
-    text-transform: uppercase;
-  }
-
-@media screen and (max-width: 1024px) { /* Specific to this particular image */
+}
+.search {
+  grid-area: 1/1/2/5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.weather {
+  grid-area: 2/1/7/3;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: left;
+  flex-direction: column;
+}
+.stats {
+  grid-area: 2/3/7/5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: right;
+}
+.forecast {
+  grid-area: 7/1/11/5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.location {
+  padding: 1rem;
+}
+.location_stats {
+  padding: 1rem;
+}
+.day1,
+.day2,
+.day3,
+.day4,
+.day5,
+.day6,
+.day7 {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.search-box {
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+  margin: 1rem;
+}
+.input-search {
+  height: 50px;
+  width: 50px;
+  border-style: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: 0;
+  border-radius: 25px;
+  transition: all 0.5s ease-in-out;
+  background-color: transparent;
+  padding-right: 40px;
+  color: #fff;
+}
+.input-search::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.btn-search {
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: 700;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  color: #fff;
+  background-color: transparent;
+  pointer-events: painted;
+}
+.btn-search:focus ~ .input-search {
+  width: 500px;
+  border-radius: 0;
+  border-style: none;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 0.5s cubic-bezier(0, 0.11, 0.35, 2);
+}
+.input-search:focus {
+  width: 500px;
+  border-radius: 0;
+  border-style: none;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 0.5s cubic-bezier(0, 0.11, 0.35, 2);
+}
+.settings {
+  position: absolute;
+  top: 1rem;
+  right: 8rem;
+}
+.weather_icons {
+  width: 128px;
+}
+#weather {
+  text-transform: lowercase;
+}
+#weather::first-letter {
+  text-transform: uppercase;
+}
+.unit-toggle {
+  position: relative;
+}
+.unit-toggle *,
+.unit-toggle:after,
+.unit-toggle:before {
+  box-sizing: border-box;
+}
+.unit-toggle input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.unit-toggle input[type="checkbox"][disabled] ~ label {
+  pointer-events: none;
+}
+.unit-toggle input[type="checkbox"][disabled] ~ label .unit-toggle__switch {
+  opacity: 0.4;
+}
+.unit-toggle input[type="checkbox"]:checked ~ label .unit-toggle__switch:before {
+  content: attr(data-unchecked);
+  left: 0;
+}
+.unit-toggle input[type="checkbox"]:checked ~ label .unit-toggle__switch:after {
+  content: attr(data-checked);
+}
+.unit-toggle label {
+  user-select: none;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.unit-toggle label .unit-toggle__label-text {
+  flex: 1;
+  padding-left: 32px;
+}
+.unit-toggle label .unit-toggle__switch {
+  position: relative;
+}
+.unit-toggle label .unit-toggle__switch:before {
+  content: attr(data-checked);
+  position: absolute;
+  top: 0;
+  text-transform: uppercase;
+  text-align: center;
+}
+.unit-toggle label .unit-toggle__switch:after {
+  content: attr(data-unchecked);
+  position: absolute;
+  z-index: 5;
+  text-transform: uppercase;
+  text-align: center;
+  background: #fff;
+  transform: translate3d(0, 0, 0);
+}
+.unit-toggle input[type="checkbox"][disabled] ~ label {
+  color: rgba(119, 119, 119, 0.5);
+}
+.unit-toggle input[type="checkbox"]:focus ~ label .unit-toggle__switch,
+.unit-toggle input[type="checkbox"]:hover ~ label .unit-toggle__switch {
+  background-color: #777;
+}
+.unit-toggle input[type="checkbox"]:focus ~ label .unit-toggle__switch:after,
+.unit-toggle input[type="checkbox"]:hover ~ label .unit-toggle__switch:after {
+  color: #5e5e5e;
+}
+.unit-toggle input[type="checkbox"]:hover ~ label {
+  color: #6a6a6a;
+}
+.unit-toggle input[type="checkbox"]:checked ~ label:hover {
+  color: #6a6a6a;
+}
+.unit-toggle input[type="checkbox"]:checked ~ label .unit-toggle__switch {
+  background-color: #6a6a6a;
+}
+.unit-toggle input[type="checkbox"]:checked ~ label .unit-toggle__switch:after {
+  color: #6a6a6a;
+}
+.unit-toggle input[type="checkbox"]:checked:focus ~ label .unit-toggle__switch,
+.unit-toggle input[type="checkbox"]:checked:hover ~ label .unit-toggle__switch {
+  background-color: #6a6a6a;
+}
+.unit-toggle input[type="checkbox"]:checked:focus ~ label .unit-toggle__switch:after,
+.unit-toggle input[type="checkbox"]:checked:hover ~ label .unit-toggle__switch:after {
+  color: #6a6a6a;
+}
+.unit-toggle label .unit-toggle__label-text {
+  flex: 1;
+}
+.unit-toggle label .unit-toggle__switch {
+  transition: background-color 0.3s cubic-bezier(0, 1, 0.5, 1);
+  background: #848484;
+}
+.unit-toggle label .unit-toggle__switch:before {
+  color: rgba(255, 255, 255, 0.5);
+}
+.unit-toggle label .unit-toggle__switch:after {
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0, 1, 0.5, 1);
+  transition: transform 0.3s cubic-bezier(0, 1, 0.5, 1);
+  color: #777;
+}
+.unit-toggle input[type="checkbox"]:focus ~ label .unit-toggle__switch:after,
+.unit-toggle input[type="checkbox"]:hover ~ label .unit-toggle__switch:after {
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
+}
+.unit-toggle input[type="checkbox"]:checked ~ label .unit-toggle__switch:after {
+  transform: translate3d(65px, 0, 0);
+}
+.unit-toggle input[type="checkbox"]:checked:focus ~ label .unit-toggle__switch:after,
+.unit-toggle input[type="checkbox"]:checked:hover ~ label .unit-toggle__switch:after {
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
+}
+.unit-toggle label {
+  font-size: 14px;
+}
+.unit-toggle label .unit-toggle__switch {
+  height: 36px;
+  flex: 0 0 134px;
+  border-radius: 4px;
+}
+.unit-toggle label .unit-toggle__switch:before {
+  left: 67px;
+  font-size: 12px;
+  line-height: 36px;
+  width: 67px;
+  padding: 0 12px;
+}
+.unit-toggle label .unit-toggle__switch:after {
+  top: 2px;
+  left: 2px;
+  border-radius: 2px;
+  width: 65px;
+  line-height: 32px;
+  font-size: 12px;
+}
+.unit-toggle label .unit-toggle__switch:hover:after {
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
+}
+@media screen and (max-width: 1024px) {
   img.bg {
-    left: 50%;
-    margin-left: -512px;   /* 50% */
+      left: 50%;
+      margin-left: -512px;
   }
 }
