--- a/weather-app/assets/css/style.css
+++ b/weather-app/assets/css/style.css
@@ -384,6 +384,14 @@ img.bg {
 .unit-toggle label .unit-toggle__switch:hover:after {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
 }
+.hourly-chart {
+  width: 100%;
+  max-width: 870px;
+  height: 100%;
+  max-height: 240px;
+  position: absolute;
+  
+}
 @media screen and (max-width: 1024px) {
   img.bg {
       left: 50%;
