--- a/weather-app/assets/css/style.css
+++ b/weather-app/assets/css/style.css
@@ -7,7 +7,6 @@ body {
   background-color: #000;
   font-family: Raleway, sans-serif;
   color: #fff;
-  font-size: xx-large;
 }
 img.bg {
   min-height: 100%;
@@ -54,6 +53,7 @@ img.bg {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: xx-large;
 }
 .stats {
   grid-area: 2 / 3 / 4 / 4;
@@ -64,6 +64,7 @@ img.bg {
   justify-content: right;
   justify-content: center;
   align-items: center;
+  font-size: x-large;
 }
 
 .stats-secondary {
@@ -75,18 +76,7 @@ img.bg {
   justify-content: right;
   justify-content: center;
   align-items: center;
-}
-
-.location-stats-secondary {
-  width: 90%;
-  height: 100%;
-  padding: 1rem;
-  border: 1px solid white;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-size: x-large;
 }
 
 .hourly {
@@ -100,28 +90,18 @@ img.bg {
   align-items: center;
 }
 
-.hourly-stats {
+.hourly-content {
   width: 100%;
   height: 100%;
   padding: 1rem;
   border: 1px solid white;
   border-radius: 25px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.hourly-content {
-  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.hourly-left, .hourly-right {
-  padding: 1rem;
-}
 
 .forecast {
   grid-area: 7 / 1 / 11 / 5;
@@ -133,7 +113,7 @@ img.bg {
   flex-direction: row;
 }
 .location {
-  width: 90%;
+  width: 100%;
   height: 100%;
   padding: 1rem;
   border: 1px solid white;
@@ -143,8 +123,20 @@ img.bg {
   justify-content: center;
   align-items: center;
 }
-.location-stats {
-  width: 90%;
+.stats-content {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  border: 1px solid white;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.stats-content-secondary {
+  width: 100%;
   height: 100%;
   padding: 1rem;
   border: 1px solid white;
@@ -214,7 +206,7 @@ img.bg {
   pointer-events: painted;
 }
 .btn-search:focus ~ .input-search {
-  width: 500px;
+  width: 45vw;
   border-radius: 0;
   border-style: none;
   background-color: transparent;
@@ -222,7 +214,7 @@ img.bg {
   transition: all 0.5s cubic-bezier(0, 0.11, 0.35, 2);
 }
 .input-search:focus {
-  width: 500px;
+  width: 45vw;
   border-radius: 0;
   border-style: none;
   background-color: transparent;
@@ -396,5 +388,114 @@ img.bg {
   img.bg {
       left: 50%;
       margin-left: -512px;
+  }
+}
+
+@media screen and (max-width: 1900px) {
+  .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(20, 1fr);
+    grid-column-gap: 0;
+    grid-row-gap: 10vh;
+    margin-bottom: 2rem;
+  }
+  .search {
+    grid-area: 1 / 1 / 2 / 3;
+    height: 50px;
+  }
+  .darken {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    width: 100vw;
+    height: 230vh;
+    z-index: 0;
+  }
+  .weather {
+    grid-area: 2 / 1 / 6 / 3;
+    height: 330px;
+    flex-direction: row;
+    font-size: medium;
+  }
+  .stats {
+    grid-area: 6 / 1 / 8 / 2;
+    height: 200px;
+    margin-top: 2rem;
+    font-size: xx-large;
+  }
+  .stats-secondary {
+    grid-area: 6 / 2 / 8 / 3;
+    height: 200px;
+    margin-top: 2rem;
+    font-size: xx-large;
+  }
+  .hourly {
+    grid-area: 8 / 1 / 10 / 3;
+    height: 300px;
+    margin-top: 5rem;
+  }
+  .forecast { 
+    grid-area: 10 / 1 / 11 / 3;
+    flex-wrap: wrap;
+    height: 200px;
+    margin-top: 14rem;
+    margin-bottom: 5rem;
+  }
+  .hourly-chart {
+    width: 90%;
+  }
+  .day1,
+  .day2,
+  .day3,
+  .day4,
+  .day5,
+  .day6,
+  .day7 {
+    width: 40%;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .stats {
+    font-size: x-large;
+  }
+  .stats-secondary {
+    font-size: x-large;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .stats {
+    font-size: large;
+  }
+  .stats-secondary {
+    font-size: large;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .stats {
+    font-size: medium;
+  }
+  .stats-secondary {
+    font-size: medium;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .stats {
+    font-size: small;
+  }
+  .stats-secondary {
+    font-size: small;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .stats {
+    font-size: x-small;
+  }
+  .stats-secondary {
+    font-size: x-small;
   }
 }
